# remembot

./: .gitignore
frontend/: app.json  package-lock.json  package.json
server/: Cargo.toml  index.html  server  server.rs  server_README.md
server/crates/server-api/: Cargo.toml
server/crates/server-api/src/: api.rs
server/crates/server-core/: Cargo.toml
server/crates/server-core/src/: lib.rs  logging.rs
server/crates/server-runtime/: Cargo.toml
server/crates/server-runtime/src/: entrypoint.rs  runtime.rs  server.rs
